--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 </head>
 <body>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit blanditiis pariatur ex, unde, corporis corrupti velit molestias perspiciatis enim sapiente, a nihil ipsa quibusdam suscipit officiis quo consequuntur! Pariatur, laborergrgre?</p>
-
-<br>
-
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis impedit enim sit eligendi odio, veniam quibusdam? Eveniet beatae fugiat maxime debitis nulla odio necessitatibus? At odio fugit dolore atque consequuntur.</p>
+<p>seni seviyorum esram :)</p>
 
 <!-- Scripts -->
 <script src="dist/js/jquery-3.6.0.min.js"></script>
