--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<p>seni seviyorum esram :)</p>
+<p>seni seviyorum esram :)sdsdffdsvsvs</p>
 
 <!-- Scripts -->
 <script src="dist/js/jquery-3.6.0.min.js"></script>
